# autodnd

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
autodnd/utils/: fetch_tools.py  game_utils.py  project_root.py  ruleset_enum.py
scripts/: fetch_rule_jsons.py  process_abilities-scores.py  process_allignments.py  process_conditions.py  process_damage-types.py  process_equipment-categories.py  process_equipment.py  process_features.py  process_languages.py  process_magic-items.py  process_magic-schools.py  process_proficiencies.py  process_rule-sections.py  process_rules.py  process_skills.py  process_subclasses.py  process_traits.py  process_weapon-properties.py
