[project]
name = "autodnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["autodnd"]

[tool.pytest.ini_options]
pythonpath = ["autodnd"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
]
